--- a/dev/scss/helpers/_mixins.scss
+++ b/dev/scss/helpers/_mixins.scss
@@ -150,3 +150,10 @@ html {
 // @include xl{
 //     grid-template-columns: repeat(4, 1fr);
 // }
+
+// Super Extra large devices
+@mixin xxl {
+    @media (min-width: #{$screen-xxl-min}) {
+        @content;
+    }
+}
