--- a/dev/scss/sections/_gallery.scss
+++ b/dev/scss/sections/_gallery.scss
@@ -1,14 +1,18 @@
 #gallery {
 
-    @include xl {
+    @include md{
         display: grid;
-        grid-template-columns: auto 1440px auto;
+        grid-template-columns: 16px auto 16px;
         grid-template-areas: ". gallery .";
+    }
+
+    @include xl {
+        grid-template-columns: auto 1440px auto;
     }
 
     >div {
 
-        @include xl {
+        @include md {
             grid-area: gallery;
         }
 
