--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -616,56 +616,26 @@ footer > div aside ul li a:visited {
     grid-area: gallery;
   }
 }
-#gallery > div ul {
-  display: grid;
-  gap: 24px;
-  grid-template-rows: repeat(3, 70vh);
+#gallery > div .carousel {
+  color: #170724;
+  --carousel-button-bg: #fff;
+  --carousel-button-shadow: 0 2px 1px -1px rgb(0 0 0 / 20%), 0 1px 1px 0 rgb(0 0 0 / 14%), 0 1px 3px 0 rgb(0 0 0 / 12%);
+  --carousel-button-svg-width: 20px;
+  --carousel-button-svg-height: 20px;
+  --carousel-button-svg-stroke-width: 2.5;
 }
-@media (min-width: 768px) {
-  #gallery > div ul {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 70vh 35vh;
-    grid-template-areas: "g1 g1" "g2 g3";
-  }
+#gallery > div .carousel .carousel__slide {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  width: 80%;
+  height: 50vh;
+  margin-right: 6px;
+  border-radius: 6px;
 }
-@media (min-width: 1440px) {
-  #gallery > div ul {
-    grid-template-columns: 60% auto;
-    grid-template-rows: 35vh 35vh;
-    grid-template-areas: "g1 g2" "g1 g3";
-  }
-}
-#gallery > div ul li a:link, #gallery > div ul li a:visited {
-  background-size: cover;
-  background-position: center;
-  height: 100%;
+#gallery > div .carousel .carousel__slide img {
   width: 100%;
-  display: inline-block;
-}
-@media (min-width: 768px) {
-  #gallery > div ul #gallery-1 {
-    background-position: bottom;
-    grid-area: g1;
-  }
-}
-#gallery > div ul #gallery-1 a {
-  background-image: url("../img/gallery/gallery-1.jpg");
-}
-@media (min-width: 768px) {
-  #gallery > div ul #gallery-2 {
-    grid-area: g2;
-  }
-}
-#gallery > div ul #gallery-2 a {
-  background-image: url("../img/gallery/gallery-2.jpg");
-}
-@media (min-width: 768px) {
-  #gallery > div ul #gallery-3 {
-    grid-area: g3;
-  }
-}
-#gallery > div ul #gallery-3 a {
-  background-image: url("../img/gallery/gallery-3.jpg");
 }
 
 #callout {
