--- a/dev/scss/layout/_header.scss
+++ b/dev/scss/layout/_header.scss
@@ -56,6 +56,7 @@ header{
             @include lg{
                 display: block;
                 background-color: $white;
+                display: block !important;
             }
 
             ul{
